--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2024"
 # gpui = { git = "https://github.com/zed-industries/zed" }
 pixels = "0.13"
 winit = { version = "0.30", features = ["rwh_05"] }
+rand = "0.8.0"
