--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "rust-program"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "my_app"
+path = "src/main.rs"
+
 [dependencies]
 # gpui = { git = "https://github.com/zed-industries/zed" }
 pixels = "0.13"
@@ -10,3 +14,4 @@ winit = { version = "0.30", features = ["rwh_05"] }
 rand = "0.8.0"
 image = "0.24"
 rodio = "0.17.3"
+rust-embed = "8.0"
