Add frame rate limiting and FPS display
AI: Add frame rate limiting and FPS display

Implement proper frame timing with FPS counter and display it in the UI.
Also add spatial grid for collision detection optimization and fix various
type

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "rust-program"
 version = "0.1.0"
 edition = "2024"
 
-[[bin]]
-name = "my_app"
-path = "src/main.rs"
+# [[bin]]
+# name = "my_app"
+# path = "src/main.rs"
 
 [dependencies]
 # gpui = { git = "https://github.com/zed-industries/zed" }
