``` Add ECS framework and test game implementation
- Introduced `my-ecs-framework` with archetype-based ECS design.
- Added `test-game` showcasing a simple bouncing player simulation.
- Implemented `PlayerSystem` for movement and collision handling.
- Added `RenderSystem` for visualizing entities using `pixels`.
```

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [workspace]
-members = ["protect-home-game", "catch-apple-game", "my-ecs-framework"]
+members = [
+    "protect-home-game",
+    "catch-apple-game",
+    "my-ecs-framework",
+    "test-game",
+]
