Rename ECS framework from my-ecs-framework to my-ecs-rust and restructure implementation
The commit renames the ECS framework from 'my-ecs-framework' to 'my-ecs-rust' to better reflect its implementation language. It also completely restructures the implementation:

1. Replaces archetype-based storage with component managers
2. Adds entity ID tracking and recycling
3. Implements a resource management system
4. Introduces frame-based updates for change tracking
5. Provides systems for managing components and entities
6. Adds world management for systems and resources

The new implementation focuses on performance with:
- Direct component storage in vectors
- Entity ID caching for fast lookups
- Efficient component access patterns
- Frame-based change detection
- Optimized queries for common component combinations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2024"
 members = [
     "protect-home-game",
     "catch-apple-game",
-    "my-ecs-framework",
+    "my-ecs-rust",
     "test-game",
 ]
