--- a/test-game/Cargo.toml
+++ b/test-game/Cargo.toml
@@ -5,11 +5,11 @@ edition = "2024"
 
 
 [dependencies]
-# my-ecs-framework = { path = "../my-ecs-framework" }
+my-ecs-rust = { path = "../my-ecs-rust" }
 
 pixels = "0.13"
 winit = { version = "0.30", features = ["rwh_05"] }
-ecs_rust = "0.0.4"
 rand = "0.8"
 rust-embed = "8.0"
 image = "0.24"
+rodio = "0.20.1"
