Move game files to old directory and update dependencies
The commit moves the game files from `protect-home-game` to `protect-home-game-old` and updates the dependencies in `protect-home-game/Cargo.toml` to use a local ECS library (`my-ecs-rust`) and newer versions of other dependencies. The changes include:

1. Moving all source files and assets to the old directory
2. Updating dependency versions in Cargo.toml
3. Adding new assets for the updated version
4. Renaming some files during the move

This appears to be part of a version upgrade where the game is being migrated to use a different architecture (ECS) while preserving the old version.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [workspace]
-members = [
-    "protect-home-game",
-    "catch-apple-game",
-    "my-ecs-rust",
-    "test-game",
-]
+members = ["protect-home-game", "my-ecs-rust"]
