--- a/protect-home-game/Cargo.toml
+++ b/protect-home-game/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
-name = "protect-home-game"
+name = "test-game"
 version = "0.1.0"
 edition = "2024"
 
-# [[bin]]
-# name = "my_app"
-# path = "src/main.rs"
 
 [dependencies]
-# gpui = { git = "https://github.com/zed-industries/zed" }
+my-ecs-rust = { path = "../my-ecs-rust" }
+
 pixels = "0.13"
 winit = { version = "0.30", features = ["rwh_05"] }
-rand = "0.8.0"
-image = "0.24"
-rodio = "0.17.3"
+rand = "0.8"
 rust-embed = "8.0"
+image = "0.24"
+rodio = "0.20.1"
