--- a/crates/engine_window/Cargo.toml
+++ b/crates/engine_window/Cargo.toml
@@ -13,4 +13,4 @@ raw-window-handle = { version = "0.6", features = [
 ], default-features = false }
 engine_ecs = { path = "../engine_ecs" }
 engine_platform = { path = "../engine_platform" }
-engine_window = { path = "../engine_window" }
+engine_math = { path = "../engine_math" }
