--- a/crates/engine_ecs/Cargo.toml
+++ b/crates/engine_ecs/Cargo.toml
@@ -2,3 +2,6 @@
 name = "engine_ecs"
 version = "0.0.1"
 edition = "2024"
+
+[dependencies]
+# bevy_ecs_macros = { path = "macros", version = "0.0.1" }
