--- a/crates/engine_internal/Cargo.toml
+++ b/crates/engine_internal/Cargo.toml
@@ -10,3 +10,7 @@ engine_ecs = { path = "../engine_ecs" }
 engine_platform = { path = "../engine_platform" }
 engine_math = { path = "../engine_math" }
 engine_app = { path = "../engine_app" }
+
+[features]
+engine_winit = []
+x11 = ["engine_winit/x11"]
