--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.0.1"
 edition = "2024"
 
 [workspace]
-members = ["crates/*", "protect-home-game", "my-ecs-rust", "my-macro"]
+# members = ["crates/*", "protect-home-game", "my-ecs-rust", "my-macro"]
+members = ["crates/*"]
 
 [dependencies]
 my-macro = { path = "my-macro" }
