添加 BufferedEvent 过程宏

--- a/crates/engine_ecs/Cargo.toml
+++ b/crates/engine_ecs/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.0.1"
 edition = "2024"
 
 [dependencies]
-# bevy_ecs_macros = { path = "macros", version = "0.0.1" }
+engine_ecs_macros = { path = "macros", version = "0.0.1" }
