--- a/crates/engine_ecs/macros/Cargo.toml
+++ b/crates/engine_ecs/macros/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "bevy_ecs_macros"
+name = "engine_ecs_macros"
 version = "0.0.1"
 edition = "2024"
 
+[lib]
+proc-macro = true
+
 [dependencies]
+engine_macro_utils = { path = "../../engine_macro_utils", version = "0.0.1" }
+
 syn = { version = "2.0.99", features = ["full", "extra-traits"] }
 proc-macro2 = "1.0"
 quote = "1.0"
-
-[lib]
-proc-macro = true
